[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/UIv2/Label.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/UIv2/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/User Interface/slider_off.png" type="Texture" id=4]
[ext_resource path="res://assets/User Interface/slider_on_disabled.png" type="Texture" id=5]
[ext_resource path="res://assets/User Interface/slider_on.png" type="Texture" id=6]
[ext_resource path="res://Scenes/UIElements/MenuBook.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/User Interface/slider_off_disabled.png" type="Texture" id=8]
[ext_resource path="res://assets/User Interface/grabber.png" type="Texture" id=9]
[ext_resource path="res://assets/User Interface/tick.png" type="Texture" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_top = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.227451, 0.137255, 0.211765, 1 )

[node name="PauseMenu" type="Node2D"]
pause_mode = 2
script = ExtResource( 3 )

[node name="BackgroundFade" type="ColorRect" parent="."]
margin_right = 1000.0
margin_bottom = 500.0
rect_rotation = 0.0119979
color = Color( 0, 0, 0, 0.392157 )

[node name="MenuBook" parent="." instance=ExtResource( 7 )]
scale = Vector2( 3.5, 3.5 )

[node name="LeftPage" type="Node2D" parent="MenuBook"]
visible = false

[node name="Title" parent="MenuBook/LeftPage" instance=ExtResource( 1 )]
margin_left = -64.0
margin_top = -50.0
margin_right = -38.0
margin_bottom = -43.0
rect_scale = Vector2( 2, 2 )
text = "Paused"

[node name="RightPage" type="Node2D" parent="MenuBook"]
visible = false

[node name="ExitInstruction" parent="MenuBook/RightPage" instance=ExtResource( 1 )]
margin_left = 21.0
margin_top = -51.0
margin_right = 98.0
margin_bottom = -43.0
rect_scale = Vector2( 0.6, 0.6 )
text = "press <esc> to resume"

[node name="DebugLabel" parent="MenuBook/RightPage" instance=ExtResource( 1 )]
margin_left = 13.0
margin_top = -42.0
margin_right = 35.0
margin_bottom = -34.0
text = "Debug"

[node name="Debug" type="CheckButton" parent="MenuBook/RightPage"]
margin_left = 40.0
margin_top = -44.0
margin_right = 172.0
margin_bottom = 24.0
rect_scale = Vector2( 0.15, 0.15 )
custom_icons/off = ExtResource( 4 )
custom_icons/on_disabled = ExtResource( 5 )
custom_icons/on = ExtResource( 6 )
custom_icons/off_disabled = ExtResource( 8 )
align = 1

[node name="ZoomLabel" parent="MenuBook/RightPage" instance=ExtResource( 1 )]
margin_left = 10.0
margin_top = -30.0
margin_right = 31.0
margin_bottom = -22.0
text = "Zoom:"

[node name="Zoom" type="HSlider" parent="MenuBook/RightPage"]
margin_left = 32.0
margin_top = -29.0
margin_right = 98.0
margin_bottom = -20.0
rect_scale = Vector2( 0.5, 0.5 )
custom_icons/tick = ExtResource( 10 )
custom_icons/grabber_disabled = ExtResource( 9 )
custom_icons/grabber_highlight = ExtResource( 9 )
custom_icons/grabber = ExtResource( 9 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 2 )
min_value = 0.6
max_value = 1.0
step = 0.1
value = 1.0
tick_count = 4
ticks_on_borders = true

[node name="EditPlayer" parent="MenuBook/RightPage" instance=ExtResource( 2 )]
margin_left = 10.0
margin_top = 34.0
margin_right = 63.0
margin_bottom = 42.0
text = "Edit Outfit"

[connection signal="pressed" from="MenuBook/RightPage/EditPlayer" to="." method="_on_EditPlayer_pressed"]
